[tool.poetry]
name = "zengrid-analysis"
version = "0.1.0"
description = "This is a package for analyzing the data of the Zengrid project."
authors = ["Kiss Miklós <mijki95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asttokens = "^2.4.0"
backcall = "^0.2.0"
bokeh = "*"
colorama = "^0.4.6"
comm = "^0.1.4"
debugpy = "^1.7.0"
decorator = "^5.1.1"
executing = "^1.2.0"
fastapi = "*"
fastparquet = "*"
ipykernel = "^6.25.2"
ipython = "^8.15.0"
ipywidgets = "*"
jedi = "^0.19.0"
joblib = "*"
jupyter = "*"
jupyter_client = "^8.3.1"
jupyter_core = "^5.3.1"
jupyterlab = "*"
matplotlib = "*"
matplotlib-inline = "^0.1.6"
msgpack = "*"
nest-asyncio = "^1.5.7"
numpy = "*"
openpyxl = "*"
packaging = "^23.1"
pandas = "*"
parso = "^0.8.3"
pickleshare = "^0.7.5"
platformdirs = "^3.10.0"
plotly = "*"
prompt-toolkit = "^3.0.39"
psutil = "^5.9.5"
pure-eval = "^0.2.2"
Pygments = "^2.16.1"
python-dateutil = "^2.8.2"
python-dotenv = "*"
pywin32 = "^306"
pyzmq = "^25.1.1"
requests = "*"
sas7bdat = "*"
scikit-learn = "*"
seaborn = "*"
six = "^1.16.0"
sqlalchemy = "*"
stack-data = "^0.6.2"
statsmodels = "*"
tornado = "^6.3.3"
traitlets = "^5.9.0"
wcwidth = "^0.2.6"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "*"
pytest = "*"
ruff = "*"
sphinx = "*"
commitizen = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
